--- a/styles.css
+++ b/styles.css
@@ -422,8 +422,8 @@ nav .fa-solid {
         font-size: 16px;
     }
     .header-text h1 {
-        font-size: 30px;
-        margin-right: 80;
+        font-size: 25px;
+        margin-right: 210px;
     }
     nav .fa-solid {
         display: block;
