--- a/styles.css
+++ b/styles.css
@@ -440,10 +440,11 @@ nav .fa-solid {
         z-index: 2;
         transition: right 0.4s;
     }
-    av ul li a {
+    nav ul li a {
         color: black;
     }
     nav ul li {
+        color: black;
         display: block;
         margin: 25px;
     }
